crates/ryft-macros-tests/tests/parameters/error_no_parameters.stderr
error: Found no generic types bounded by 'Parameter'. To use the ryft '#[derive(Parameterized)]' macro you must bound exactly one type parameter with the 'Parameter' trait; not none and not more than one. The bound must be specified as 'Parameter' or 'ryft::Parameter' where 'ryft' must be substituted for the custom ryft 'crate' provided, if one was provided using the '#[ryft(crate = ...)]' attribute.
 --> tests/parameters/error_no_parameters.rs:4:8
  |
4 | struct NestedVecOfTuples<P> {
  |        ^^^^^^^^^^^^^^^^^

warning: unused import: `Parameter`
 --> tests/parameters/error_no_parameters.rs:1:12
  |
1 | use ryft::{Parameter, Parameterized};
  |            ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
