crates/ryft-macros-tests/tests/parameters/error_no_parameters.rs
use ryft::{Parameter, Parameterized};

#[derive(Parameterized)]
struct NestedVecOfTuples<P> {
    parameter: Vec<P>,
}

fn main() {}
